--- a/css/components/navbars.css
+++ b/css/components/navbars.css
@@ -25,7 +25,7 @@
 /* Specific styles for lower navbar */
 .navbar--lower {
   position: fixed;
-  bottom: 4vh;
+  bottom: 40vh;
   left: 50%;
   transform: translateX(-50%) translateY(100%) scale(0.8); /* Center horizontally */
   opacity: 1;
